@@ -1,3 +1,8 @@
+2003-01-17  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/commands.c (about_command): remove gettext marks from author
+	names, as there's no non-ASCII character to translate.
+
 2003-01-11  Jordi Mallach  <jordi@sindominio.net>
 
 	* NEWS, configure.in: released gtetrinet 0.5.2.
